@startuml

title __PIZZA's Class Diagram__\n

  namespace com.atguigu.factory.simplefactory.pizzastore.pizza {
    class com.atguigu.factory.simplefactory.pizzastore.pizza.CheesePizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.simplefactory.pizzastore.pizza {
    class com.atguigu.factory.simplefactory.pizzastore.pizza.GreekPizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.simplefactory.pizzastore.pizza {
    class com.atguigu.factory.simplefactory.pizzastore.pizza.PepperPizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.simplefactory.pizzastore.pizza {
    abstract class com.atguigu.factory.simplefactory.pizzastore.pizza.Pizza {
        # name : String
        + bake()
        + box()
        + cut()
        {abstract} + prepare()
        + setName()
    }
  }
  

  com.atguigu.factory.simplefactory.pizzastore.pizza.CheesePizza -up-|> com.atguigu.factory.simplefactory.pizzastore.pizza.Pizza
  com.atguigu.factory.simplefactory.pizzastore.pizza.GreekPizza -up-|> com.atguigu.factory.simplefactory.pizzastore.pizza.Pizza
  com.atguigu.factory.simplefactory.pizzastore.pizza.PepperPizza -up-|> com.atguigu.factory.simplefactory.pizzastore.pizza.Pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
